Lesson alignment issues

--- a/app/styles/components/class/analytics/performance/_gru-performance-summary.scss
+++ b/app/styles/components/class/analytics/performance/_gru-performance-summary.scss
@@ -72,7 +72,7 @@
           span {
             color:$color-gray-6;
             &:last-child{
-              font-size:$font-size-large;
+              font-size:$font-size-small;
             }
             &.isCompleted i{
               color:$color-blue-primary;
