--- a/app/styles/components/class/analytics/performance/student/_gru-lesson-performance.scss
+++ b/app/styles/components/class/analytics/performance/student/_gru-lesson-performance.scss
@@ -45,8 +45,6 @@
           height:50px;
         }
         >*{
-          margin: 0;
-          padding: 0;
           -webkit-order: 0;
           order: 0;
           -webkit-flex-grow: 1;
@@ -58,9 +56,10 @@
           -webkit-align-self: auto;
           align-self: auto;
           height: 100%;
+          width:100%;
+          margin:0;
         }
         >ul{
-          margin:0;
           >li{
             &.lesson-performance-title {
               -webkit-flex-direction: row;
